# isaac-mod-manager

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: local-test.ps1
src/: fs_utils.rs  gui.rs  main.rs  patcher.rs  steam_api.rs  steam_workshop.rs
