[package]
name = "isaac-mod-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
directories = "5.0"
anyhow = "1.0"
eframe = "0.27"
rfd = "0.14"
quick-xml = { version = "0.31", features = ["serialize"] }
zip = "0.6"
encoding_rs = "0.8"
image = { version = "0.24", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sys-locale = "0.3"
scraper = "0.19"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
